--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
+    "@mui/joy": "^5.0.0-beta.25",
     "@mui/material": "^5.15.0",
     "@mui/x-charts": "^6.18.4",
     "@mui/x-data-grid": "^6.18.6",
@@ -22,7 +23,8 @@
     "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
